--- a/index.css
+++ b/index.css
@@ -6,30 +6,16 @@
     padding:0 !important ;
     padding-left:0 !important ;
 }
-/* #nav{
-background-color: rgb(228, 227, 225)!important;
-} */
-/* #nav3{
+h3{
+    line-height:35px;
     background-color:green;
-    
-
-} */
-/* .container-fluid{
-    width:100%;
-} */
-/* #jon {
-position: absolute      !important;
-  bottom: 20px          !important;
-  width: 100%           !important;
-  padding: 15px         !important;
-  margin-bottom: 0      !important;
-  font-weight: 300      !important;
-  line-height:30px      !important;
-  color: #fff          !important ;    
-  text-align:center     !important;
-  background: #4aaaa5 !important;
-  border-bottom: 0      !important;
-} */
+    font-size:30px;
+    text-align:center;
+    color:white;
+    position: absolute;
+    bottom:20px;
+    width:89%;
+}
 #h1{
     text-align:center;
 }
@@ -77,7 +63,7 @@ position: absolute      !important;
     background-color:green;
 }
 body{
-color: #777;
+/* color: #777; */
   background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAKddtjp-6_Ipqrq2PPHL8ETi3hQo665mLRiBXAPJJjoEpLBwKew");
 }
 .espace{
