--- a/index.css
+++ b/index.css
@@ -64,7 +64,7 @@ h3{
 }
 body{
 /* color: #777; */
-  background: url("https://github.com/Jonathan169/BootStrap-porfolio/blob/master/pics/Camera%20Roll/images.jpg?raw=true");
+  background: url("pics/Camera%20Roll/images.jpg");
 }
 .espace{
     height:50px;
